create edit functionality for days off in ManagerRestaurantEdit component

--- a/04-front-end/src/components/Manager/ManagerRestaurantPage/ManagerRestaurantEdit.sass
+++ b/04-front-end/src/components/Manager/ManagerRestaurantPage/ManagerRestaurantEdit.sass
@@ -19,3 +19,29 @@
   height: 40px
   display: flex
   align-items: center
+
+.dayOff 
+  .alert 
+    display: inline-block
+    margin: 10px 10px
+    max-width: 300px  
+
+  button
+    margin-top: 10px
+
+  input
+    width: 100%
+  
+  .input-group 
+    .form-control
+      width: 100%
+    .btn
+      z-index: 0
+
+  .add-cancel-buttons > *
+    margin: 10px 10px
+
+
+
+  
+
